2008-11-08  Al Riddoch  <alriddoch@googlemail.com>

	* test/agent.cpp, test/stubServer.cpp, test/tests.cpp:
	  Add includes required by more recent compilers.

2008-11-07  Al Riddoch  <alriddoch@googlemail.com>

	* test/BaseConnection_unittest.cpp: Add C includes required by more
	  recent compilers.

2008-11-04  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Added AC_PROG_CXX as it is required to set up the
	  C++ compiler correctly.

2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Fixing library to compile under GCC 4.3.

2007-11-24  Al Riddoch  <alriddoch@googlemail.com>

	* eris.spec.in: Break static libs out into their own package.
	  Update contact email address. Fix name of Atlas-C++ package.
	  Create now sub package for generated documentation.

	* eris.dox.in: Do an automated update of the doxygen config.

2007-11-22  Al Riddoch  <alriddoch@zepler.org>

	* test/Makefile.am: Fix dependencies.

	* Eris/Makefile.am: Strip out experimental Janus code.

	* configure.ac: Increment version number, and remove checks for
	  Janus.

2007-10-24  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Cover a number of methods that could
	  not be covered safely before Connection::send was overriden.

2007-10-23  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Connection.cpp, Eris/Connection.h: Fix up formatting and
	  whitespace use.

	* test/Connection_unittest.cpp: Add coverage for the first few
	  functions.

2007-10-11  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Override send() on TestConnection so
	  code which calls it can be covered safely. Add coverage for some
	  code which had been left because calling send() was unsafe.

2007-10-11  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp, test/tests.cpp: Update for the new
	  simpler observer API.

2007-10-11  Al Riddoch  <alriddoch@zepler.org>

	* test/Calendar_unittest.cpp: Cover all of DateTime and
	  topLevelEntityChanged() of Calendar.
